--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ linear-gradient(
 </div>
 <div class="col-sm-4" style="padding-bottom:50px">
   <div class="demo-card-square mdl-card mdl-shadow--2dp text-center" id="this" >
-  <div class="mdl-card__title mdl-card--expand text-center subheader" id="card2">
+  <div class="mdl-card__title mdl-card--expand text-center subheader" style="background:none;display:block;margin:0 auto;font-size:30px">
      2017 Award Winners
   </div>
   <div class="mdl-card__supporting-text body" >
