--- a/webpagedesign.html
+++ b/webpagedesign.html
@@ -170,7 +170,7 @@ linear-gradient(
                   <li>Copyright information and credits are not included in the narrative or displayed with the project.</li>
                   <li>A planning document is not displayed/available that clarifies the process used to create the project.</li>
                  </ul>
-               <p class="body" style="padding-top:50px;font-size:25px">If a project meets the above rules it will be judged using the following: <a href="http://www.pacomputerfair.org/rubrics/GraphicDesignRubric.pdf" target="_blank" style="color:blue"><i>Graphic Design Scoring Guideline</i></a></p>
+               <p class="body" style="padding-top:50px;font-size:25px">If a project meets the above rules it will be judged using the following: <a href="http://pacomputerfair.org/rubrics/WebPageDesignRubric.pdf" target="_blank" style="color:blue"><i>Web Page Design Scoring Guideline</i></a></p>
             </div>
           </div>
           <div id="nd" class="container-fluid text-center genInfo-text" style="padding-top:50px;padding-bottom:50px">
