--- a/genInfo.html
+++ b/genInfo.html
@@ -265,7 +265,7 @@
                   </div>
                   <div class="col-sm-1"></div>
                   <div class="col-sm-6 text-center">
-                      <img class="zoom" src ="images/judges.png" style="padding-top:50px;height:50%;width:50%;margin:0 auto;display:block;">
+                      <img src ="images/judges.png" style="padding-top:50px;height:50%;width:50%;margin:0 auto;display:block;">
                       <p class="subheader" style="padding-top:10px;font-size:15px">REMEMBER! Judges' decisions are <b><i>final</i></b> so no arguing!</p>
                        </div>
                   
