--- a/digitalmovie.html
+++ b/digitalmovie.html
@@ -161,7 +161,7 @@ linear-gradient(
               <div class="col-sm-1"></div>
              <div class="col-sm-5">
                 <h2 class="subheader">A project will be <b><i>disqualified</i></b> if any of the following occur:</h2>
-                <ul class="body">
+                <ul class="body text-left">
                   <li>The narrative description is missing.</li>
                   <li>Copyright information and credits are not included in the narrative or displayed with the project.</li>
                   <li>The storyboard is not displayed/available that clarifies the process used to create the project. (see scoring guideline)</li>
