--- a/animation.html
+++ b/animation.html
@@ -261,15 +261,14 @@ linear-gradient(
       </div>
      <div class="modal-body modal-text hanging-indent ">
           <p>
-              PA High School Computer Fair, Chester County Intermediate Unit, 2018,<a href=”https://pacomputerfair.org/” target=”_blank”> pacomputerfair.org/</a>. This website provides information regarding the PA High School Computer Fair competition. I received permission from the owner of the website, Diane Thompson, to use all information and images used in the website on my website.
+              PA High School Computer Fair, Chester County Intermediate Unit, 2018,<a href="https://pacomputerfair.org"  target=”_blank”> pacomputerfair.org/</a>. This website provides information regarding the PA High School Computer Fair competition. I received permission from the owner of the website, Diane Thompson, to use all information and images used in the website on my website.
 
           </p>
           <p>
 							Otto, Mark, and Jacob Thornton. "Bootstrap · The World's Most Popular Mobile-first and Responsive Front-end Framework." Bootstrap · The World's Most Popular Mobile-first and Responsive Front-end Framework. Twitter, 2016. Web. 4 Feb. 2018. (<a href="https://getbootstrap.com/" target="_blank" style="color:blue">http://getbootstrap.com/</a>). The Bootstrap framework was used in this project to allow for cross-platform adaptability between various screen sizes and screen densities. All design choices and stylistic elements were of our own creation.
 						</p>
         <p>
-          Dhakar, Lokesh. "Lightbox." Lightbox, 2010, <a href="lokeshdhakar.com/projects/ 
-     lightbox2/" target="_blank" style="color:blue">lokeshdhakar.com/projects/ 
+          Dhakar, Lokesh. "Lightbox." Lightbox, 2010, <a href="http://lokeshdhakar.com/projects/lightbox2/" target="_blank" style="color:blue">lokeshdhakar.com/projects/ 
      lightbox2/</a>. Accessed 4 Feb. 2018. The Lightbox framework was used in this 
      project to create slideshows of images and images expandable. 
         </p>
