--- a/computerfairlogo.html
+++ b/computerfairlogo.html
@@ -303,7 +303,7 @@ linear-gradient(
       </div>
      <div class="modal-body modal-text hanging-indent ">
           <p>
-              PA High School Computer Fair, Chester County Intermediate Unit, 2018,<a href="pacomputerfair.org/" target=”_blank”> pacomputerfair.org/</a>. This website provides information regarding the PA High School Computer Fair competition. I received permission from the owner of the website, Diane Thompson, to use all information and images used in the website on my website.
+              PA High School Computer Fair, Chester County Intermediate Unit, 2018,<a href="http://pacomputerfair.org" target=”_blank”> pacomputerfair.org/</a>. This website provides information regarding the PA High School Computer Fair competition. I received permission from the owner of the website, Diane Thompson, to use all information and images used in the website on my website.
 
           </p>
           <p>
