--- a/statecompetition.html
+++ b/statecompetition.html
@@ -249,7 +249,7 @@ The awards will be held in the Anita Tuvin Schlechter Auditorium (ATS).<br/>
 				           <div class="cardes">
 				           <p style="font-size:25px;color:black;"><b class="header">Breakout EDU</b><br/><span class="subheader" style="font-size:15px;color:black;padding-top:30px;padding-bottom:30px"><i>3 Concurrent Sessions</i></span><br/>
 				          <span style="font-size:18px;color:black;" class="body"> Are you ready for a Breakout Challenge? Players work together to problem solve, troubleshoot, and solve the challenge to <b>Break Out</b> before time expires!
-				          If you would like more information about Breakout EDU and their programs, you can check out their website here: <a class="body" href="https://www.breakoutedu.com/">Breakout EDU Website</a>
+				          If you would like more information about Breakout EDU and their programs, you can check out their website here: <a class="body" style="color:blue" href="https://www.breakoutedu.com/">Breakout EDU Website</a>
 
 				         
 				          </span>
