--- a/genInfo.html
+++ b/genInfo.html
@@ -160,7 +160,7 @@
                   <p  class="body" >
                     The Copyright Signoff form, Project Narrative/Summary, and Photo Release form must be combined into one file for 
                     your convenience (Computer Fair Participation Packet). This completed packet <b>MUST</b> accompany every project.
-                    Click <a href="http://www.pacomputerfair.org/resources/ParticipationPacket_2013.pdf" style="color:blue"><i>here</i></a> to download.
+                    Click <a href="http://www.pacomputerfair.org/resources/ParticipationPacket_2013.pdf" target="_blank" style="color:blue"><i>here</i></a> to download.
                   </p>
                 </div>
                 <div class="col-sm-6" style="padding-top:25px;padding-bottom:30px">
