--- a/genInfo.html
+++ b/genInfo.html
@@ -251,7 +251,7 @@
                               Final judging: All judges will view each of the finalists projects and may require the students to answer questions.
                           </li>
                           <li style="font-size:20px">
-                              All judging <a href="#" style="color:blue">rubrics</a> are posted on this website.
+                              All judging rubrics are posted on this website.
                           </li>
                           <li style="font-size:20px">
                               Judges may not have a direct association with the participants.
@@ -279,7 +279,7 @@
                       <ul>
                           <li style="font-size:20px">
                               
-                              All participants must register online at http://www.pacomputerfair.org
+                              All participants must register online at <a href="http://pacomputerfair.org" style="color:blue" target="_blank">http://www.pacomputerfair.org</a>
                           </li>
                           <li style="font-size:20px">
                               Registration for the regional competition must be completed and submitted by the date specified by the appropriate regional intermediate unit.
