--- a/digitalmovie.html
+++ b/digitalmovie.html
@@ -402,7 +402,10 @@ linear-gradient(
 						<p>
 						    Projector Cinema Film Demonstration Movie Projector. Digital Image. Max Pixel. FreeGreatPicture.com, 2018. Web. 1 Mar. 2018. (<a href="http://maxpixel.freegreatpicture.com/Projector-Cinema-Film-Demonstration-Movie-Projector-64149" target="_blank">http://maxpixel.freegreatpicture.com/Projector-Cinema-Film-Demonstration-Movie-Projector-64149</a>). This picture uses the CC0 Creative Commons License and is free to use by any person without attribution (as per the image description). 
 						</p>
-					
+						<p>
+						    Old West, Dickinson College. Digital Image. Wikipedia Commons. Wikipedia Commons, 2018. Web. 1 Mar. 2018. (<a href="https://commons.wikimedia.org/wiki/File:OLD_WEST,_DICKINSON_COLLEGE.jpg" target="_blank">https://commons.wikimedia.org/wiki/File:OLD_WEST,_DICKINSON_COLLEGE.jpg</a>). This picture uses the CC0 Creative Commons License and is free to use by any person without attribution (as per the image description). 
+
+						</p>
 
       </div>
       <div class="modal-footer">
