--- a/awards.html
+++ b/awards.html
@@ -46,10 +46,10 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>  
-        <a class="navbar-brand" href="index.html" style="color: white; font-family: 'Raleway'; font-size:22px;"><b>PA Computer Fair</b></a>
+        <a class="navbar-brandnew navbar-brand" href="index.html" style="color: white; font-family: 'Raleway'; font-size:22px;"><b>PA Computer Fair</b></a>
       </div>
       <div class="collapse navbar-collapse" id="mainNav">
-        <div class="nav navbar-nav navbar-right ">
+        <div class="nav navbar-nav navbar-right navbar-states">
           
           <li ><a href="genInfo.html" style="color:white;font-size:18px;"><b>General Info</b></a></li>
          
