--- a/awards.html
+++ b/awards.html
@@ -114,7 +114,7 @@
                 <h3 class="sub" >$50*</h3>
     </div>
   </div>
-  <p style="font-size:20px;color:white;font-family:Lobster;padding-bottom:40px"align="center">*These prizes are awarded at the state competition. Regional prizes are determined by the local coordinators.</p>
+  <p class="body" style="font-size:20px;color:white;padding-bottom:40px"align="center">*These prizes are awarded at the state competition. Regional prizes are determined by the local coordinators.</p>
 </div>
 
 <footer class="container-fluid body" id="foot">
